fix(gridcell) Another attempt to address flickering on iOS chrome.

--- a/src/components/GridCell/GridCell.scss
+++ b/src/components/GridCell/GridCell.scss
@@ -1,10 +1,12 @@
 .gridCell {
+	backface-visibility: hidden;
+	backface-visibility: hidden;
 	background-color: var(--accent-a2);
 	background-image: image-set(var(--grid-cell-image-1x) 1x, var(--grid-cell-image-2x) 2x);
 	background-position: center;
 	background-size: cover;
 
-	/* Prevent layout thrashing on viewport changes */
+	/* Prevent layout thrashing on viewport changes (iOS Chrome) */
 	contain: layout;
 	height: var(--grid-cell-size);
 
